SONAR-15441 - QG Groups Search Endpoint